--- a/INICIOSESION.html
+++ b/INICIOSESION.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html> <!-- Define el tipo de documento HTML5 -->
-<html lang="es"> <!-- Comienza el HTML y define el idioma español -->
-
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <!-- Configuración de codificación de caracteres -->
     <meta charset="UTF-8">
-    <!-- Hace la página responsive para dispositivos móviles -->
+    <!-- Hacer que la página sea responsive en dispositivos móviles -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Título que aparece en la pestaña del navegador -->
+    <!-- Título de la pestaña del navegador -->
     <title>Iniciar sesión</title>
-    <!-- Descripción para buscadores -->
+    <!-- Descripción para SEO -->
     <meta name="description" content="Página de inicio de sesión para acceder a tu cuenta.">
 
-    <!-- Enlace al CSS de Bootstrap para estilos y diseño responsivo -->
+    <!-- Bootstrap para diseño responsive y estilos predeterminados -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Enlace a Font Awesome para iconos -->
+    <!-- Font Awesome para íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <style>
-        /* Estilo general del body con fondo, fuente y centrado */
         body {
             height: 100vh;
             margin: 0;
@@ -30,7 +28,6 @@
             position: relative;
         }
 
-        /* Superposición oscura sobre la imagen de fondo */
         body::before {
             content: '';
             position: fixed;
@@ -42,13 +39,11 @@
             z-index: -1;
         }
 
-        /* Título del formulario */
         h2 {
             font-family: 'Times New Roman', Times, serif;
             font-size: 35px;
         }
 
-        /* Estilos del encabezado */
         header {
             padding: 1px;
             max-height: 8.5vw;
@@ -57,7 +52,6 @@
             align-items: center;
         }
 
-        /* Estilo del logo dentro de la barra de navegación */
         .navbar-brand img {
             margin-top: 10px;
             margin-left: -89px;
@@ -66,7 +60,6 @@
             width: 17vw;
         }
 
-        /* Enlaces del menú de navegación */
         .nav-link {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 20px;
@@ -76,42 +69,38 @@
             text-align: center;
         }
 
-        /* Efecto hover en los enlaces */
         .nav-link:hover {
             color: #08291c !important;
             text-decoration: none;
         }
 
-        /* Icono del botón para dispositivos móviles */
         .navbar-toggler-icon {
             width: 1.4rem;
             height: 1.4rem;
             margin-top: -5px;
         }
 
-        /* Ajuste del botón hamburguesa */
         .navbar-toggler {
             margin-top: -30px;
         }
 
-        /* Contenedor del formulario */
         .form-container {
             background: #e6f3d959;
             padding: 15px;
-            border-radius: 0.8rem;
-            box-shadow: 0 4px 4px 0px rgba(0, 0, 0, 0.3);
+            border-radius: 15px;
             width: 320px;
             text-align: center;
             margin-top: 40px;
+            border: 1px solid #00ff00;
+            box-shadow: 0 0 3px 3px #00ff00;
+            animation: brillo 2s infinite ease-in-out;
         }
 
-        /* Etiquetas de los inputs */
         .input-group label {
             display: block;
             margin-bottom: 5px;
         }
 
-        /* Inputs del formulario */
         .input-group input {
             width: 85%;
             border-radius: 0.5rem;
@@ -121,7 +110,6 @@
             color: rgb(14, 14, 14);
         }
 
-        /* Enlaces para recuperar contraseña o registrarse */
         .forgot a,
         .signup a {
             color: rgb(0, 0, 0);
@@ -129,7 +117,6 @@
             font-size: 1rem;
         }
 
-        /* Botón personalizado verde */
         .botoncito-2 {
             background-color: #28a745;
             padding: 10px;
@@ -139,17 +126,14 @@
             width: 60%;
         }
 
-        /* Hover para el botón */
         .botoncito-2:hover {
             background-color: #218838;
         }
 
-        /* Enlace en condiciones */
         .form-check a {
             color: #08291c;
         }
 
-        /* Botón flotante para volver atrás */
         .back-button {
             position: fixed;
             top: 20px;
@@ -170,19 +154,16 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
 
-        /* Efecto hover para botón de regreso */
         .back-button:hover {
             background-color: #45a049;
             transform: scale(1.05);
         }
 
-        /* Icono dentro del botón de regreso */
         .back-button img {
             width: 20px;
             height: 20px;
         }
 
-        /* Contenedor de términos y condiciones */
         .term-section {
             background: rgba(255, 255, 255, 0.7);
             backdrop-filter: blur(10px);
@@ -194,14 +175,12 @@
             transition: all 0.3s ease;
         }
 
-        /* Efecto hover de la sección de términos */
         .term-section:hover {
             transform: translateY(-5px);
             box-shadow: 0 8px 25px rgba(76, 175, 80, 0.2);
             background: rgba(255, 255, 255, 0.8);
         }
 
-        /* Título de la sección de términos */
         .term-section h6 {
             color: #28a745;
             font-size: 1.2rem;
@@ -210,26 +189,22 @@
             padding-bottom: 10px;
         }
 
-        /* Íconos dentro de la sección */
         .term-section i {
             margin-right: 10px;
             color: #28a745;
         }
 
-        /* Lista de elementos dentro de términos */
         .term-section ul li {
             margin: 10px 0;
             color: #333;
             transition: all 0.3s ease;
         }
 
-        /* Hover para los ítems */
         .term-section ul li:hover {
             transform: translateX(10px);
             color: #28a745;
         }
 
-        /* Ajustes responsive para móviles */
         @media (max-width: 768px) {
             .navbar-brand img {
                 margin-top: -15px;
@@ -252,24 +227,24 @@
             }
         }
 
-        /* Animación para el borde brillante */
         @keyframes brillo {
             0% {
                 box-shadow: 0 0 3px 1px #00ff00;
             }
+
             50% {
                 box-shadow: 0 0 10px 4px #00ff00;
             }
+
             100% {
                 box-shadow: 0 0 3px 1px #00ff00;
             }
         }
 
-        /* Contenedor con borde animado verde */
         .borde-verde {
             margin: 0;
             padding: 0px;
-            padding-top: -10px;
+            padding-top: 10px;
             border: 1px solid #00ff00;
             border-radius: 15px;
             box-shadow: 0 0 3px 3px #00ff00;
@@ -279,70 +254,60 @@
     </style>
 </head>
 <body>
-    <!-- Botón para regresar a página anterior -->
+    <!-- Botón de regreso a la página principal -->
     <a href="paginapri.html" class="back-button">
         <i class="fas fa-arrow-left"></i>
         Regresar
     </a>
     
-    <!-- Contenedor del formulario centrado -->
+    <!-- Contenedor principal centrado vertical y horizontalmente -->
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
+        <!-- Contenedor del formulario con padding -->
         <div class="container2">
-            <!-- Caja con borde animado -->
-            <div class="borde-verde">
-                <!-- Contenedor del formulario -->
-                <div class="form-container p-4">
-                    <!-- Título del formulario -->
-                    <h2 class="text-center mb-4"><b>Iniciar sesión</b></h2>
+            <div class="form-container p-4">
+                <!-- Título del formulario -->
+                <h2 class="text-center mb-4"><b>Iniciar sesión</b></h2>
 
-                    <!-- Formulario de login -->
-                    <form id="loginForm" action="iniciar_sesion.php" method="POST">
-                        <!-- Selección de tipo de usuario -->
-                        <div class="form-group">
-                            <label for="tipo_Inicio"><b>Iniciar sesión como</b></label>
-                            <select required name="tipo_Inicio" class="form-control" id="tipo_Inicio">
-                                <option value="#">Selecciona una opción</option>
-                                <option value="Usuario">Usuario</option>
-                                <option value="Administrador">Administrador</option>
-                                <option value="Supervisor">Supervisor</option>
-                            </select>
-                        </div>
+                <!-- Formulario de inicio de sesión -->
+                <form id="loginForm" action="iniciar_sesion.php" method="POST">
+                    <div class="form-group">
+                        <label for="tipo_Inicio"><b>Iniciar sesión como</b></label>
+                        <select required name="tipo_Inicio" class="form-control" id="tipo_Inicio">
+                            <option value="#">Selecciona una opción</option>
+                            <option value="Usuario">Usuario</option>
+                            <option value="Administrador">Administrador</option>
+                            <option value="Supervisor">Supervisor</option>
+                        </select>
+                    </div>
 
-                        <!-- Campo de número de documento -->
-                        <div class="form-group">
-                            <label for="num_doc_usu"><b>Número de documento</b></label>
-                            <input type="text" class="form-control" name="num_doc_usu" id="num_doc_usu" placeholder="Ingrese número de documento de identidad" required>
-                        </div>
+                    <div class="form-group">
+                        <label for="num_doc_usu"><b>Número de documento</b></label>
+                        <input type="text" class="form-control" name="num_doc_usu" id="num_doc_usu" placeholder="Ingrese número de documento de identidad" required>
+                    </div>
 
-                        <!-- Campo de contraseña -->
-                        <div class="form-group">
-                            <label for="contrasena"><b>Contraseña</b></label>
-                            <input type="password" class="form-control" name="contrasena" id="contrasena" placeholder="Ingrese su contraseña" required>
-                        </div>
+                    <div class="form-group">
+                        <label for="contrasena"><b>Contraseña</b></label>
+                        <input type="password" class="form-control" name="contrasena" id="contrasena" placeholder="Ingrese su contraseña" required>
+                    </div>
 
-                        <!-- Casilla para aceptar términos -->
-                        <div class="aceptar-condiciones">
-                            <input type="checkbox" id="acepta">
-                            <label for="acepta">Acepto los <a href="tyc.php">términos y condiciones</a> haciendo clic <strong>aquí</strong>.</label>
-                        </div>
+                    <div class="aceptar-condiciones">
+                        <input type="checkbox" id="acepta">
+                        <label for="acepta">Acepto los <a href="tyc.php">términos y condiciones</a> haciendo clic <strong>aquí</strong>.</label>
+                    </div>
 
-                        <!-- Botón para enviar el formulario -->
-                        <button type="submit" class="botoncito-2">Iniciar sesión</button>
-                    </form>
+                    <button type="submit" class="botoncito-2">Iniciar sesión</button>
+                </form>
 
-                    <!-- Enlace al registro -->
-                    <p class="signup text-center mt-3">
-                        ¿No tienes cuenta? <a href="Registro de usuario.html">Regístrate</a>
-                    </p>
-                </div>
+                <p class="signup text-center mt-3">
+                    ¿No tienes cuenta? <a href="Registro de usuario.html">Regístrate</a>
+                </p>
             </div>
         </div>
     </div>
 
-    <!-- Scripts necesarios para funcionamiento de Bootstrap y otros -->
+    <!-- Scripts JavaScript necesarios para el funcionamiento de la página -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/iniciosesion.js"></script>
 </body>
 </html>
