--- a/iniusu.html
+++ b/iniusu.html
@@ -561,7 +561,7 @@ a:hover {
    <img src="profil.png" alt="" width="120vw" height="120vw">
 </div>
 <br>
-    <h1><b>BIENVENIDO A TU MOVILIDAD GRUPO ECOMOVI </b><br>
+    <h1><b>BIENVENIDO A ECOMOVI </b><br>
     </h1>
     <br>
     <br>
